# spectrum

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  HANDOFF.md  README.md  RUN PANEL.bat  SPEC.md  START.bat  STOP.bat  config.example.json
crates/engine/: Cargo.toml
crates/engine/src/: analyze.rs  config.rs  discord.rs  engine.rs  feeds.rs  lib.rs  rss.rs  skins.rs  store.rs
crates/headless/: Cargo.toml
crates/headless/src/: main.rs
deploy/: INSTALL-AUTOSTART.bat  RILEY.md  SETUP.bat  START.bat  STOP.bat  UNINSTALL-AUTOSTART.bat  package.ps1
scripts/: dev.ps1
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
